# master-thesis-code

./: .gitattributes  .gitignore  Makefile  README.md  methodology.md  methodology.tex  pyproject.toml  references.bib  results.md  test.py
data/raw/inclusions/: slpublic_sxxp_20151001.csv  slpublic_sxxp_20151101.csv  slpublic_sxxp_20160101.csv  slpublic_sxxp_20160201.csv  slpublic_sxxp_20160401.csv  slpublic_sxxp_20160501.csv  slpublic_sxxp_20160701.csv  slpublic_sxxp_20160801.csv  slpublic_sxxp_20161001.csv  slpublic_sxxp_20161101.csv  slpublic_sxxp_20170101.csv  slpublic_sxxp_20170201.csv  slpublic_sxxp_20170501.csv  slpublic_sxxp_20170701.csv  slpublic_sxxp_20170801.csv  (+86 more)
data/results/: add_events_country_distribution.csv  add_vs_delete_comparison.csv  case_study_add_delete.csv  delete_did_results.csv  delete_dml_results.csv  delete_matched_pairs.csv  did_results_idiovol.csv  did_results_synchronicity.csv  dml_results.csv  matched_pairs.csv  parsing_audit_summary.csv  placebo_dml_results.csv  placebo_results.csv  robustness_caliper_results.csv
notebooks/: exploration.ipynb  result_walkthrough.ipynb
scripts/analysis/: 00_eda_and_checks.py  01_matching.py  02_did_estimation.py  03_event_study.py  04_double_ml.py
scripts/other/: case_study.py
scripts/preparation/: 01_panel_composition.py  02_collect_prices.py  03_check_coverage.py  04_fix_tickers.py  05_build_panel.py  06_build_features.py
scripts/robustness/: caliper_sensitivity.py  delete_events.py  placebo_dml.py  placebo_test.py
scripts/visualization/: panel_plots.py
stoxx50/: Makefile
(+21 files in other folders)
