[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "yfinance",
    "statsmodels",
    "scikit-learn",
    "linearmodels",
    "matplotlib",
    "kaleido>=1.2.0",
    "PyPDF2",
    "seaborn>=0.13.2",
    "geopandas>=1.1.3",
    "geodatasets>=2026.1.0",
    "plotly>=6.7.0",
    "nbformat>=5.10.4",
    "ipywidgets>=8.1.8",
    "doubleml>=0.11.2",
]
